# higgsfield

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  FIXES_APPLIED.md  IMPLEMENTATION.md  LICENSE  Makefile  QUICKSTART.md  README.md  base.py  claude_agent.py  docker-compose.yml  generate_tools.py  models.py  motions.json  pyproject.toml  requirements.txt  start.sh
.railway/: config.json
backend/: Dockerfile  alembic.ini  docker-compose.yml  requirements.txt  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  15cc2086f595_v7.py  2e6012c493a9_v3.py  5bb957311c07_v6.py  71fdedafc0e1_v5.py  8472fcdc6236_v8.py  88a0b82ee6ca_v4.py  9d909c019ece_fist_migration.py  f91128f49771_v2.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py  errors.py
backend/app/api/higgsfield/: __init__.py  generate.py  misc.py  (+3 more)
backend/app/core/: config.py  logging.py  security.py
backend/app/database/: models.py
backend/app/domain/: models.py  pagination.py  schemas.py  states.py
backend/app/infra/: db.py  idempotency.py  metrics.py  redis.py  s3.py
backend/app/services/: attachments.py  chat_service.py  claude_recommender.py  model_catalog.py  orchestrator.py  prompt_enhance.py  provider_higgsfield.py  recommender.py  response_parser.py  sse_broker.py  tools_export.json
backend/app/workers/: celery_app.py  tasks.py
init/localstack/: 10-setup-s3.sh
tests/: conftest.py  test_api_generate.py  test_api_messages.py  test_poller.py  test_presign_localstack.py
tests/fixtures/: jobset_completed.json  jobset_failed.json
(+7 files in other folders)
