[tool.poetry]
name = "higgsfield-backend"
version = "0.1.0"
description = "Production chat-based assistant with Higgsfield generation integration"
authors = ["Higgsfield Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
httpx = "^0.26.0"
redis = "^4.6.0"
celery = {extras = ["redis"], version = "^5.3.4"}
structlog = "^24.1.0"
boto3 = "^1.34.27"
prometheus-client = "^0.19.0"
python-dotenv = "^1.0.0"
sse-starlette = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
httpx = "^0.26.0"
ruff = "^0.1.14"
black = "^24.1.1"
mypy = "^1.8.0"
types-redis = "^4.6.0"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["backend"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

